updated lab/code along

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we will practice using instance variables and differentiating them from local variables. We will continue with our awesome `fuber` theme. We have a couple files already provided for us, driver.py and ride.py. To get started, we need to import these files, which we have alread done below. "
+    "In this lab, we will practice using instance variables and differentiating them from local variables. We will continue with our awesome `fuber` theme. We have a couple files already provided for us in this directory, driver.py and ride.py. We will use these to define our classes and instance methods."
    ]
   },
   {
@@ -37,7 +37,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have been writing functions and working with variables for a while now. We've talked about the difference between global variables and local variables. However, classes add another level of complexity with instance variables. Remember the difference between local and global variables is their scope. Local varibles have local or function scope, that is that they are only able to be accessed inside the function in which they are defined. Global variables can be accessed from anywhere in the file. Instance variables are bound to an instance. They can be thought of more as attributes or properties of an instance. An instance variable can only be accessed by the instance that it is bound to. "
+    "We have been writing functions and working with variables for a while now. We've talked about the difference between global variables and local variables. However, classes add another level of complexity with instance variables. Remember the difference between local and global variables is their scope. Local varibles have local or function scope, that is that they are only able to be accessed inside the function in which they are defined. Global variables can be accessed from anywhere in the file. Below is an example to jog your memory, if this is a little confusing:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'other_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-177fd1439fa8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"terrance\" # global variable\n",
+    "def example_function():\n",
+    "    other_name = \"jake\" # local variable\n",
+    "    \n",
+    "print(name)\n",
+    "print(other_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance."
    ]
   },
   {
@@ -46,170 +86,229 @@
    "source": [
     "## Okay, but Why Do We Need Instance Variables?\n",
     "\n",
-    "Let's imagine we have a driver, `alex`, who has an attribute called `name`. If we wanted to query that attribute, we would only want to recieve the `name` attribute from the driver instance, `alex`. Let's see how we would set something like this up with local variables alone:"
+    "Let's imagine we have two drivers. We istantiate them as instances of the `ExampleDriver` class and assign them to variables, `driver_one` and `driver_two`. Let's see this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x10f3aa588>\n",
+      "<__main__.ExampleDriver object at 0x10f3aa630>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
+    "    pass\n",
+    "    \n",
+    "driver_one = ExampleDriver()\n",
+    "driver_two = ExampleDriver()\n",
+    "print(driver_one)\n",
+    "print(driver_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice anything? Pretty hard to tell who is who... How can we fix this? We could probably give them names, right? That's where instance variables come in. Instance variables can be thought of as an attribute on an object. So, if we want our instance objects to have a `name` attribute, we simply need to add it to the object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver_one.name = 'alex'\n",
+    "print(driver_one.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Great! We have made our first instance variable and we can now start to differentiate our instance objects and make them a bit more interesting. To reiterate, adding an attribute like `name` to an instance object is done by simply using the syntax, `variable-dot-attribute = value`. Let's add driver_two's name now, let's name them 'julian'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add name to driver_two"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can imagine these instance objects getting quite complex and we will want a way to look at the attributes -- similar to how we want to be able to look at the keys in a dictionary. Luckily for us, there is a method that shows us just that! `vars` is a method that returns a dictionary containing the keys and values that represent the attributes and values of an instance object. Let's see it in action:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'julian'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(driver_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since `vars` returns a dictionary, we can even go a step further and just look at the attributes without their associated values by calling the `keys` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(driver_two).keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, that we know how to add attributes as instance variables to our instance objects, let's look at how we would add an instance method as an attribute for our instance objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def say_hello():\n",
+    "        print(\"Hi! How are you today?\")\n",
     "        \n",
-    "    def set_name(self, new_name):\n",
-    "        name = new_name\n",
-    "        return name\n",
-    "    \n",
-    "    def get_name(self):\n",
-    "        return name\n",
-    "    \n",
-    "example_alex = ExampleDriver()"
+    "jeff = Person()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool, no errors and it looks pretty straightforward. Let's try it out. First we'll give the `name` a value with `set_name`:"
+    "Okay, here we have defined an instance method called `say_hello` and an instance assinged to the variable, `jeff`. Let's try to call this method on our instance object, `jeff`: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Alex'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "say_hello() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-7ebd56e95aec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjeff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msay_hello\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: say_hello() takes 0 positional arguments but 1 was given"
+     ]
     }
    ],
    "source": [
-    "example_alex.set_name('Alex')"
+    "jeff.say_hello()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alright, so we can assign the variable with our string and then return the variable successfully. Let's try just querying the name now that we've assigned it a value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Alex'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "example_alex.get_name()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Oh no! `NameError: name 'name' is not defined` --  what does this mean?\n",
+    "Oh no! We got an error... :( \n",
     "\n",
-    "As the error states, the `'name'` variable is undefined in this method. We defined name in local scope, so, now that we are in another function it is undefined. We could change things a bit to get this class to use a global variable for `name`, but then we can see that as soon as we create a new driver and reassign the global variable, we would have lost the name of the previous driver, `alex`. Don't worry too much about that right now. The key take away is that we are only able to define instance variables as attributes of an instance and we need to have the instance in scope to access its variables or attributes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Putting Instance Variables to the Test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It seems natural that a driver would have an attribute of `distance_driven` and that this attribute would be present at the start of one's professional driving career. So, let's add that to our `__init__` instance method in the `Driver` class and initialize it with a value of `0`. Next, we'll need a way for us to access and change this value. So let's define instance methods to accomplish both of these tasks, we'll call these methods `get_distance`, which will return the driver's `distance_driven`, and `set_distance`, which will take in a distance and add it to the driver's `distance_driven` attribute and finally return the updated `distance_driven`. "
+    "`TypeError: say_hello() takes 0 positional arguments but 1 was given` as we can see we defined our method to not recieve any arguments. However, Python uses the instance object, `jeff` as the first argument of the instance method `say_hello`. So, this means Python is trying to pass in an argument into our method, but our method does not allow for any arguments. Don't worry about this behavior just yet, we can just define our instance method to take an argument and everything should work fine."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from driver import Driver"
+    "class Person2:\n",
+    "    def say_hello(argument):\n",
+    "        print(\"Hi! How are you today?\")\n",
+    "        \n",
+    "jeff2 = Person2()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's instantiate a new driver and assign it to the varible `alex`. Next get the initial `distance_driven`, which should be `0` and assign it to `initial_distance`."
+    "Alright, round 2. Let's try this instance method again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alex = Driver()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "Hi! How are you today?\n"
      ]
     }
    ],
    "source": [
-    "initial_distance = alex.get_distance()\n",
-    "print(initial_distance)"
+    "jeff2.say_hello()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! we now have a driver and their initial distance driven. Let's take a 5 mile ride with `alex`. To do this, we need to call the `set_distance` method on `alex` and pass in an argument of `5`. Let's assign the return value of this operation to the variable, `new_dist`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_dist = alex.set_distance(5)\n",
-    "print(new_dist)"
+    "Awesome! It worked. Again, we'll come back to exaclty what that `argument` is later. "
    ]
   },
   {
@@ -217,7 +316,7 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "In this lab we learned how to differentiate between instance and local variables. Then we saw the reason we need to use instance variables when we are assigning or operating on an attribute of an instance object. Finally we practiced using instance methods to read and re-assign the values of our instance variables."
+    "In this lesson we saw how to define instance variables and saw how to use them in order to give our instance objects attributes and added complexity. We then saw how to define instance methods and call them on our instance objects. "
    ]
   }
  ],
