--- a/Index.ipynb
+++ b/Index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we will practice using instance variables and differentiating them from local variables. We will continue with our awesome `fuber` theme. We have a couple files already provided for us in this directory, driver.py and ride.py. We will use these to define our classes and instance methods."
+    "In this lab, we will practice using instance variables. We will continue with our awesome `fuber` theme. In this directory, we have a couple files already provided for us, driver.py and passenger.py. We will use these to define our classes and instance methods."
    ]
   },
   {
@@ -22,7 +22,6 @@
     "## Objectives\n",
     "\n",
     "* Define instance variables.\n",
-    "* Distinguish instance variables from local variables.\n",
     "* Describe how instance variables give objects attributes and properties."
    ]
   },
@@ -42,42 +41,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "terrance\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'other_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-177fd1439fa8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"terrance\" # global variable\n",
     "def example_function():\n",
     "    other_name = \"jake\" # local variable\n",
-    "    \n",
-    "print(name)\n",
-    "print(other_name)"
+    "    print(other_name)\n",
+    "\n",
+    "example_function() # executing fuction with local variable\n",
+    "print(name) # printing global variable\n",
+    "print(other_name) # printing local variable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance."
+    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance. This means we define instance variables **on** instance objects. These instance variables are then only accessible through the instance on which it was defined.\n",
+    "\n",
+    "The following is an example of adding an instance variable to an instance object and then accessing it later. Don't worry if it is confusing, we will explain what is happening below later in the lesson."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    pass\n",
+    "\n",
+    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -91,18 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.ExampleDriver object at 0x10f3aa588>\n",
-      "<__main__.ExampleDriver object at 0x10f3aa630>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -122,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "alex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -142,12 +124,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! We have made our first instance variable and we can now start to differentiate our instance objects and make them a bit more interesting. To reiterate, adding an attribute like `name` to an instance object is done by simply using the syntax, `variable-dot-attribute = value`. Let's add driver_two's name now, let's name them 'julian'."
+    "Great! We have made our first instance variable and we can now start to differentiate our instance objects and make them a bit more interesting. To reiterate, adding an attribute like `name` to an instance object is done by simply using the following syntax: `variable-dot-attribute = value`. Let's add driver_two's name now, let's name them 'julian'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,25 +140,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can imagine these instance objects getting quite complex and we will want a way to look at the attributes -- similar to how we want to be able to look at the keys in a dictionary. Luckily for us, there is a method that shows us just that! `vars` is a method that returns a dictionary containing the keys and values that represent the attributes and values of an instance object. Let's see it in action:"
+    "Now, we can imagine wanting to add many instance variables to these instance objects which would make them quite complex. We will want a way to look at the instance variables -- similar to how we want to be able to look at the keys in a dictionary. Luckily for us, there is a method that shows us just that! \n",
+    "\n",
+    "`vars` is a method that returns a dictionary containing the keys and values that represent the instance variable names and values of an instance object. Let's see it in action:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Note:** instance variables and instance methods can both be referred to as `attributes` of an instance object. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'julian'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vars(driver_two)"
    ]
@@ -190,22 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['name'])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -214,47 +183,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, that we know how to add attributes as instance variables to our instance objects, let's look at how we would add an instance method as an attribute for our instance objects."
+    "Awesome! As the note above states, instance variables aren't the only attribute. Our instance methods are also attributes, so, let's see again how we make those:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
-    "    def say_hello():\n",
+    "    def say_hello(self):\n",
     "        print(\"Hi! How are you today?\")\n",
     "        \n",
-    "jeff = Person()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Okay, here we have defined an instance method called `say_hello` and an instance assinged to the variable, `jeff`. Let's try to call this method on our instance object, `jeff`: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "say_hello() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-7ebd56e95aec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjeff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msay_hello\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: say_hello() takes 0 positional arguments but 1 was given"
-     ]
-    }
-   ],
-   "source": [
+    "jeff = Person()\n",
     "jeff.say_hello()"
    ]
   },
@@ -262,53 +204,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oh no! We got an error... :( \n",
-    "\n",
-    "`TypeError: say_hello() takes 0 positional arguments but 1 was given` as we can see we defined our method to not recieve any arguments. However, Python uses the instance object, `jeff` as the first argument of the instance method `say_hello`. So, this means Python is trying to pass in an argument into our method, but our method does not allow for any arguments. Don't worry about this behavior just yet, we can just define our instance method to take an argument and everything should work fine."
+    "So, as we can see instance variables and instance methods look very similar syntactically. In fact, the main difference between the two is that instance methods are callable attributes on an instance object and instance variables are not callable. This makes sense since instance methods have a block of code to execute and instance variables do not. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember how we said that there were a couple files provided for us? Let's put them to use and define both a Driver and a Passenger class -- for now just define the classes and remember to include the keyword `pass`. Below we'll import them and load the `autoreload` extension from IPython."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Person2:\n",
-    "    def say_hello(argument):\n",
-    "        print(\"Hi! How are you today?\")\n",
-    "        \n",
-    "jeff2 = Person2()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Alright, round 2. Let's try this instance method again."
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi! How are you today?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "jeff2.say_hello()"
+    "from driver.py import Driver\n",
+    "from passenger.py import Passenger"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome! It worked. Again, we'll come back to exaclty what that `argument` is later. "
+    "Now let's instantiate a new instance of a passenger and a new instance of a driver. Give the passenger a `rating` of `4.9` and give the driver a `miles_driven` attribute of `100,000`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = None # assign a driver instance\n",
+    "# give the driver instance object 'miles_driven' of 100000\n",
+    "passenger = None # assign the passenger instance\n",
+    "# give the passenger instance object a 'rating' of 4.9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Say we wanted to find a driver with a given name -- how would we do that? Let's take a look at how we could write a function that would take in a list of instance objects and return the one with the desired name. That sounds like the functionality we want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_driver_by_name(list_drivers, name):\n",
+    "    for driver in list_drivers:\n",
+    "        if driver.name == name:\n",
+    "            return driver\n",
+    "    return \"Sorry we couldn't find a driver with the name, {}! :(\".format('allison')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alex_driver = Driver()\n",
+    "alex_driver.name = \"alex\"\n",
+    "michelle_driver = Driver()\n",
+    "michelle_driver.name = \"michelle\"\n",
+    "jake_driver = Driver()\n",
+    "jake_driver.name = \"jake\"\n",
+    "ashleigh_driver = Driver()\n",
+    "ashleigh_driver.name = \"ashleigh\"\n",
+    "list_of_drivers = [alex_driver, michelle_driver, jake_driver]\n",
+    "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"allison\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cool! That looks like it worked. We can see that the method returns the Driver instance object when it finds an instance with the given name and returns a message saying that driver does not exist, if it cannot find a driver with that name. Now try writing a method that will return a list of instance objects that start with the letter `a`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your method here that returns the list of \n",
+    "# drivers whose name starts which the letter 'a'"
    ]
   },
   {
@@ -317,6 +315,97 @@
    "source": [
     "## Summary\n",
     "In this lesson we saw how to define instance variables and saw how to use them in order to give our instance objects attributes and added complexity. We then saw how to define instance methods and call them on our instance objects. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, now let's work on creating more complex instance objects. Let's make a driver, `best_driver`, that has the attributes `name`, `car_make`, `car_model`, `age`, and `passengers`. The `passengers` attribute will point to a list of rider instances. The list of riders is already provided for you below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alex_passenger = Passenger()\n",
+    "alex_passenger.name = \"alex\"\n",
+    "michelle_passenger = Passenger()\n",
+    "michelle_passenger.name = \"michelle\"\n",
+    "jake_passenger = Passenger()\n",
+    "jake_passenger.name = \"jake\"\n",
+    "ashleigh_passenger = Passenger()\n",
+    "ashleigh_passenger.name = \"ashleigh\"\n",
+    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_driver = None # instantiate a driver\n",
+    "# add the name attribute and assign it 'Garol'\n",
+    "# add the car_make attribute and assign it 'toyota'\n",
+    "# add the car_model attribute and assign it 'camry'\n",
+    "# add the age attribute and assign it '30'\n",
+    "# add the passengers attribute and assign it to the list_of_passengers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alright, great! Now we have some attributes on our driver that we can work with. Let's create an instance method in the Driver class called `passenger_names` which returns a list of all the passengers' names that a driver has driven (i.e. a driver's `passengers`). \n",
+    "Your output should look like `['alex', 'michelle', 'jake', 'ashleigh']`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you would like to see a more formatted list, plug in the names_of_passengers into the function below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_names(list_of_names):\n",
+    "    i = 1\n",
+    "    for name in list_of_names:\n",
+    "        print(\"{}. {}\".format(i, name))\n",
+    "        i += 1\n",
+    "\n",
+    "# call display_names with your list of passenger names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neat -- great work! "
    ]
   }
  ],
