updated code along

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we will practice using instance variables. We will continue with our awesome `fuber` theme. In this directory, we have a couple files already provided for us, driver.py and passenger.py. We will use these to define our classes and instance methods."
+    "In this lab, we will practice using instance variables, and continue with our awesome `fuber` theme. In this directory, we have a couple files already provided for us, driver.py and passenger.py. We will use these to define our classes and instance methods."
    ]
   },
   {
@@ -59,9 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance. This means we define instance variables **on** instance objects. These instance variables are then only accessible through the instance on which it was defined.\n",
+    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance. This means we define instance variables **on** instance objects. These instance variables are then only accessible through the instance on which they were defined.\n",
     "\n",
-    "The following is an example of adding an instance variable to an instance object and then accessing it later. Don't worry if it is confusing, we will explain what is happening below later in the lesson."
+    "The following is an example of adding an instance variable to an instance object and then accessing it later. Don't worry if it is confusing right now, the rest of this lesson will clear things up."
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Okay, but Why Do We Need Instance Variables?\n",
+    "## Okay, But Why Do We Need Instance Variables?\n",
     "\n",
     "Let's imagine we have two drivers. We istantiate them as instances of the `ExampleDriver` class and assign them to variables, `driver_one` and `driver_two`. Let's see this:"
    ]
@@ -107,7 +107,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice anything? Pretty hard to tell who is who... How can we fix this? We could probably give them names, right? That's where instance variables come in. Instance variables can be thought of as an attribute on an object. So, if we want our instance objects to have a `name` attribute, we simply need to add it to the object."
+    "Notice anything? Pretty hard to tell who is who... How can we fix this? We could probably give them names, right? Well, how do we assign a name to these instances?\n",
+    "\n",
+    "That's where instance variables come in. Instance variables can be thought of as an attribute on an object. So, if we want our instance objects to have a `name` attribute, we simply need to add it to the object."
    ]
   },
   {
@@ -383,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you would like to see a more formatted list, plug in the names_of_passengers into the function below:"
+    "If you would like to see a more formatted list, try calling the method below on the best_driver instance:"
    ]
   },
   {
