typos and fixed driver passenger module imports

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "## Okay, But Why Do We Need Instance Variables?\n",
     "\n",
-    "Let's imagine we have two drivers. We istantiate them as instances of the `ExampleDriver` class and assign them to variables, `driver_one` and `driver_two`. Let's see this:"
+    "Let's imagine we have two drivers. We instantiate them as instances of the `ExampleDriver` class and assign them to variables, `driver_one` and `driver_two`. Let's see this:"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** instance variables and instance methods can both be referred to as `attributes` of an instance object. "
+    "> **Note:** instance variables and instance methods both can be referred to as `attributes` of an instance object. "
    ]
   },
   {
@@ -232,8 +232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from driver.py import Driver\n",
-    "from passenger.py import Passenger"
+    "from driver import Driver\n",
+    "from passenger import Passenger"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Say we wanted to find a driver with a given name -- how would we do that? Let's take a look at how we could write a function that would take in a list of instance objects and return the one with the desired name. That sounds like the functionality we want."
+    "Say we wanted to find a driver with a given name -- how would we do that? Let's take a look at how we could write a function that would take in a list of instance objects and return the one with the desired name."
    ]
   },
   {
@@ -289,8 +289,9 @@
     "jake_driver.name = \"jake\"\n",
     "ashleigh_driver = Driver()\n",
     "ashleigh_driver.name = \"ashleigh\"\n",
-    "list_of_drivers = [alex_driver, michelle_driver, jake_driver]\n",
+    "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]\n",
     "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
     "print(find_driver_by_name(list_of_drivers, \"allison\"))"
    ]
   },
@@ -427,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
